force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/Apttus_Config2__ProductAttribute__c.object-meta.xml
<CustomObject>
    <description>Represents a single attribute in a product attribute group</description>
    <label>Product Attribute</label>
    <nameField>
        <displayFormat>AT-{0000000000}</displayFormat>
        <label>Attribute Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>