force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__CascadeSharedAttributeStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CascadeSharedAttributeStatus__c</fullName>
    <description>Indicates one or more line status to which the cascade shared attribute updates should apply to</description>
    <inlineHelpText>Indicates one or more line status to which the cascade shared attribute updates should apply to</inlineHelpText>
    <label>Cascade Shared Attribute Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Incremented</fullName>
            </value>
            <value>
                <fullName>Incremented and Merged</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Changed Configuration</fullName>
            </value>
            <value>
                <fullName>Upgraded</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Split and Renewed</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>