force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__CascadeSharedAttributeUpdates__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CascadeSharedAttributeUpdates__c</fullName>
    <description>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</description>
    <inlineHelpText>Indicates whether updates to shared bundle attributes are cascaded to options in the bundle</inlineHelpText>
    <label>Cascade Shared Attribute Updates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>