force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__DisplayType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisplayType__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Radio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>