force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__Field__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Field__c</fullName>
    <description>The field in the business object which stores the attribute value</description>
    <label>Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>