force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__FieldUpdateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldUpdateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is deprecated</description>
    <label>Field Update (Deprecated)</label>
    <referenceTo>Apttus_Config2__FieldExpression__c</referenceTo>
    <relationshipLabel>Product Attributes</relationshipLabel>
    <relationshipName>ProductAttributes</relationshipName>
    <type>Lookup</type>
</CustomField>