force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__IsExtension__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsExtension__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the attribute is an extension attribute</description>
    <inlineHelpText>Indicates whether the attribute is an extension attribute</inlineHelpText>
    <label>Is Extension</label>
    <type>Checkbox</type>
</CustomField>