force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__IsHidden__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the attribute is hidden</description>
    <inlineHelpText>Indicates whether the attribute is hidden</inlineHelpText>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>