force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not this attribute appears in the product detail dialog in the cart.</description>
    <inlineHelpText>Indicates whether or not this attribute appears in the product detail dialog in the cart.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>