force-app/main/default/objects/Apttus_Config2__ProductAttribute__c/fields/Apttus_Config2__ProductAttributeValueField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductAttributeValueField__c</fullName>
    <description>The product attribute value field which maps to the business object field. If blank, it is assumed the API names are the same.</description>
    <label>Product Attribute Value Field (DEPR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>